// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateButton Component navigates to the correct link on click 1`] = `
<DocumentFragment>
  <div
    class="CreateButton"
  >
    <button
      class="bi bi-plus btn btn-primary"
      type="button"
    >
      Erstelle neue Umfrage
    </button>
  </div>
</DocumentFragment>
`;

exports[`EditButton Component navigates to the correct URL on click 1`] = `
<DocumentFragment>
  <div
    class="EditButton"
  >
    <button
      class="bi bi-pencil btn btn-primary"
      type="button"
    >
       Edit
    </button>
  </div>
</DocumentFragment>
`;

exports[`EditButton Component navigates to the correct URL on click 1`] = `
<DocumentFragment>
  <div
    class="EditButton"
  >
    <button
      class="bi bi-pencil btn btn-primary"
      type="button"
    >
       Edit
    </button>
  </div>
</DocumentFragment>
`;
